compiler/framework/test/fail/boolean_arithmetic.cvc
// Comparisons don't work on booleans, except for ==.


export int main() {
    if (true > false) {}
    return 0;
}
